[workspace]
resolver = "2"
members = [
    "picoserve",
    "examples/chunked_response",
    "examples/custom_extractor",
    "examples/form",
    "examples/hello_world",
    "examples/hello_world_single_thread",
    "examples/huge_requests",
    "examples/layers",
    "examples/nested_router",
    "examples/path_parameters",
    "examples/routing_fallback",
    "examples/server_sent_events",
    "examples/state",
    "examples/static_content",
    "examples/web_sockets"
]
exclude = [
    "examples/embassy",
]

[workspace.dependencies]
anyhow = "1.0.86"
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["rt", "io-util", "net", "time", "macros"] }
