[package]
name = "picoserve"
version = "0.17.1"
authors = ["Samuel Hicks"]
edition = "2021"
rust-version = "1.85"
description = "An async no_std HTTP server suitable for bare-metal environments"
readme = "../README.md"
repository = "https://github.com/sammhicks/picoserve"
license = "MIT"
keywords = ["no_std", "http", "web", "framework"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]

features = ["tokio", "embassy", "json", "ws"]

[dependencies]
const-sha1 = { version = "0.3.0", default-features = false }
data-encoding = { version = "2.4.0", default-features = false, optional = true }
defmt = { version = "1.0.1", optional = true }
embassy-net = { version = ">=0.8.0", optional = true, features = ["tcp", "proto-ipv4", "medium-ethernet"] }
embassy-time = { version = ">=0.5.0", optional = true }
embedded-io-async = "0.7"
heapless = { version = "0.8.0", features = ["serde"] }
lhash = { version = "1.1.0", features = ["sha1"], optional = true }
log = { version = "0.4.19", optional = true, default-features = false }
picoserve_derive = { version = "0.1.4", path = "../picoserve_derive" }
pin-project = "1.1.10"
ryu = { version = "1.0.14", optional = true }
serde = { version = "1.0.171", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", optional = true }
thiserror = { version = "2.0.9", default-features = false }
tokio = { version = "1.32.0", optional = true, features = ["io-util", "net", "time"] }

[features]
std = ["alloc"]     # Use the standard library. Used by examples.
alloc = []          # Enable `FromRequest` and `Content` for some alloc types.

tokio = ["dep:tokio", "std", "serde/std"]                               # Use the `tokio` runtime. Used by examples.
embassy = ["dep:embassy-time", "dep:embassy-net"]                       # Use the `embassy` runtime and `embassy-net` sockets.
defmt = ["dep:defmt", "embassy-net?/defmt", "serde-json-core/defmt"]    # Emit log messages using the `defmt` crate.
log = ["dep:log"]                                                       # Emit log messages using the `log` crate.

json = ["dep:ryu", "dep:serde-json-core"]   # Enable JSON support
ws = ["dep:data-encoding", "dep:lhash"]     # Enable WebSocket support

[dev-dependencies]
embedded-io-async = { version = "0.7.0", features = ["std"] }
futures-util = { version = "0.3.28", default-features = false }
http-body-util = "0.1.0"
httparse = "1.10.1"
hyper = { version = "1.1.0", features = ["client", "http1"] }
ntest = "0.9.3"
tokio = { version = "1.0.0", features = ["rt", "io-util", "net", "time", "macros", "sync"] }
