[package]
name = "picoserve_derive"
version = "0.1.1"
authors = ["Samuel Hicks"]
edition = "2021"
rust-version = "1.80"
description = "Macros for picoserve"
repository = "https://github.com/sammhicks/picoserve"
license = "MIT"
keywords = ["no_std", "http", "web", "framework"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.92", features = ["full"] }

[dev-dependencies]
thiserror = { version = "2.0.9", default-features = false }
