[workspace]
resolver = "2"
members = [
    "app_with_props",
    "example_secrets",
    "hello_world",
    "set_pico_w_led",
    "various_states",
    "web_sockets"
]
exclude = [
    "hello_world_defmt",
]

[workspace.dependencies]
cortex-m-rt = "0.7.3"
cyw43 = { version = "0.3.0", features = ["firmware-logs"] }
cyw43-pio = "0.4.0"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "nightly"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.0", features = ["tcp", "proto-ipv4", "medium-ethernet"] }
embassy-rp = { version = "0.4.0", features = ["rp2040", "critical-section-impl", "time-driver"] }
embassy-sync = "0.6.0"
embassy-time = "0.4.0"
embassy-usb-logger = "0.4.0"
embedded-io-async = "0.6.1"
log = { version = "0.4.22", default-features = false }
panic-persist = { version = "0.3.0", features = ["utf8"] }
picoserve = { path = "../../picoserve", features = ["embassy", "log"] }
portable-atomic = { version = "1.7.0", features = ["critical-section"], default-features = false }
rand = { version = "0.8.5", default-features = false }
static_cell = "2.1.0"
