[package]
name = "graceful_shutdown_web_sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
picoserve = { path = "../../picoserve", features = ["tokio", "ws", "json"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
