[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
picoserve = { path = "../../picoserve", features = ["tokio"] }
tokio = { workspace = true }
