[package]
name = "hello_world_single_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
picoserve = { path = "../..", features = ["tokio"] }
tokio = { version = "1.31.0", features = ["rt", "io-util", "net", "time", "macros"] }
