[package]
name = "huge_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
picoserve = { path = "../../picoserve", features = ["log", "tokio"] }
pretty_env_logger = { workspace = true }
sha2 = { version = "0.10.9", default-features = false }
tokio = { workspace = true }
