[package]
name = "server_sent_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
picoserve = { path = "../../picoserve", features = ["tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
