[package]
name = "static_content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
heapless = { version = "0.8.0", features = ["serde"] }
picoserve = { path = "../..", features = ["tokio"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["rt", "io-util", "net", "time", "macros"] }
