[package]
name = "static_content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
heapless = { version = "0.8.0", features = ["serde"] }
picoserve = { path = "../..", features = ["tokio"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["rt", "io-util", "net", "time", "macros"] }
