[package]
name = "hello_world_defmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cyw43 = { version = "0.6.0", features = ["firmware-logs"] }
cyw43-pio = "0.9.0"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "nightly"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = ["tcp", "proto-ipv4", "medium-ethernet"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "critical-section-impl", "time-driver"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt-timestamp-uptime"] }
example_secrets = { path = "../example_secrets" }
log = { version = "0.4.20", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
picoserve = { path = "../../../picoserve", features = ["embassy", "defmt"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"], default-features = false }
rand = { version = "0.9.2", default-features = false }
static_cell = { version = "2.0.0", features = ["nightly"] }